src/objects/QPMS__CEM_Type_Task_Template__c.object
<CustomObject>
    <description>This object stores tasks related customer experience records.</description>
    <fields>
        <fullName>QPMS__Adhoc_Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>65</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>75</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Customer_Experience_Type__c</fullName>
        <description>Parent</description>
        <label>Customer Experience Type</label>
        <referenceTo>QPMS__Customer_Experience_Type__c</referenceTo>
        <relationshipLabel>CEM Type Task Templates</relationshipLabel>
        <relationshipName>CEM_Type_Task_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QPMS__Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store the owner value</description>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CEM_Type_Task_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Title__c</fullName>
        <label>Task Title</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Adhoc Task</fullName>
                </value>
                <value>
                    <fullName>Review DHR</fullName>
                </value>
                <value>
                    <fullName>Product Evaluation</fullName>
                </value>
                <value>
                    <fullName>Investigation</fullName>
                </value>
                <value>
                    <fullName>Closure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CEM Type Task Template</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>CEMTASK</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CEM Type Task Templates</pluralLabel>
    <recordTypes>
        <fullName>QPMS__Adhoc_Task</fullName>
        <active>true</active>
        <label>Adhoc Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Closure</fullName>
        <active>true</active>
        <label>Closure</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Investigation</fullName>
        <active>true</active>
        <label>Investigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Product_Evaluation</fullName>
        <active>true</active>
        <label>Product Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Review_DHR</fullName>
        <active>true</active>
        <label>Review DHR</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>